--- a/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
@@ -10,9 +10,62 @@
         <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../fr.inria.diverse.kompren.root/pom.xml</relativePath>
     </parent>
     
 	<build>
+		
+<!-- 		<sourceDirectory>src/main/java</sourceDirectory> -->
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+				<version>${xtend.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+							<goal>xtend-install-debug-info</goal>
+							<goal>xtend-test-install-debug-info</goal>
+						</goals>
+                        <configuration>
+                                <outputDirectory>${xtendGenDirectory}</outputDirectory>
+								<testOutputDirectory>${xtendGenDirectory}-test</testOutputDirectory>
+                        </configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+	            <groupId>org.codehaus.mojo</groupId>
+	            <artifactId>build-helper-maven-plugin</artifactId>
+	            <version>1.7</version>
+	            <executions>
+	                <execution>
+	                    <id>add-source</id>
+	                    <phase>generate-sources</phase>
+	                    <goals>
+	                        <goal>add-source</goal>
+	                    </goals>
+	                    <configuration>
+	                        <sources>
+	                            <source>${xtendGenDirectory}</source>
+	                        </sources>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
+		
+		
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
@@ -48,99 +101,8 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.xtend</groupId>
-				<artifactId>xtend-maven-plugin</artifactId>
-				<version>${xtend.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>testCompile</goal>
-							<goal>xtend-install-debug-info</goal>
-							<goal>xtend-test-install-debug-info</goal>
-						</goals>
-                        <configuration>
-                                <outputDirectory>${xtendGenDirectory}</outputDirectory>
-								<testOutputDirectory>${xtendGenDirectory}-test</testOutputDirectory>
-                        </configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-			</plugin>
-		</plugins>
 	</build>
 	<dependencies>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.jdt</groupId> -->
-<!-- 			<artifactId>core</artifactId> -->
-<!-- 			<version>[3.8.2,)</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.equinox</groupId> -->
-<!-- 			<artifactId>app</artifactId> -->
-<!-- 			<version>[1.3.100,)</version> -->
-<!-- 		</dependency> -->
-<!-- 	    <dependency> -->
-<!-- 	      <groupId>org.eclipse.equinox</groupId> -->
-<!-- 	      <artifactId>common</artifactId> -->
-<!-- 	      <version>[3.2.0,4.0.0)</version> -->
-<!-- 	      <optional>false</optional> -->
-<!-- 	    </dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.emf</groupId> -->
-<!-- 			<artifactId>org.eclipse.emf.codegen.ecore</artifactId> -->
-<!-- 			<version>[2.9.1,)</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.emf</groupId> -->
-<!-- 			<artifactId>org.eclipse.emf.codegen</artifactId> -->
-<!-- 			<version>[2.9.0,)</version> -->
-<!-- 		</dependency> -->
-<!--         <dependency> -->
-<!--             <groupId>fr.inria.diverse.kompren</groupId> -->
-<!--             <artifactId>fr.inria.diverse.kompren.model</artifactId> -->
-<!--             <version>${kompren.version}</version> -->
-<!--         </dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.xtend</groupId> -->
-<!-- 			<artifactId>org.eclipse.xtend.lib</artifactId> -->
-<!-- 			<version>${xtend.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>fr.inria.diverse.k3.al</groupId> -->
-<!-- 			<artifactId>fr.inria.diverse.k3.al.annotationprocessor</artifactId> -->
-<!-- 			<version>${kermeta.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.emf</groupId> -->
-<!-- 			<artifactId>org.eclipse.emf.ecore.xmi</artifactId> -->
-<!-- 			<version>${emf.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.emf</groupId> -->
-<!-- 			<artifactId>org.eclipse.emf.ecore</artifactId> -->
-<!-- 			<version>${emf.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.emf</groupId> -->
-<!-- 			<artifactId>org.eclipse.emf.common</artifactId> -->
-<!-- 			<version>${emf.version}</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>junit</groupId> -->
-<!-- 			<artifactId>junit</artifactId> -->
-<!-- 			<version>${junit.version}</version> -->
-<!-- 			<scope>test</scope> -->
-<!-- 		</dependency> -->
+
 	</dependencies>
 </project>
