--- a/kompren-core/fr.inria.diverse.kompren.model/build.properties
+++ b/kompren-core/fr.inria.diverse.kompren.model/build.properties
@@ -7,6 +7,5 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src/,\
-           model/
-output.. = bin/
+source.. = src/
+output.. = target/classes/
