--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
@@ -13,6 +13,7 @@
         <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../../kompren-core/fr.inria.diverse.kompren.root/pom.xml</relativePath>
     </parent>
     
     <build>
@@ -38,7 +39,7 @@
             <extensions>true</extensions>
             <configuration>
                 <instructions>
-                    <Bundle-SymbolicName>org.kermeta.kompren.model.editor; singleton=true</Bundle-SymbolicName>
+                    <Bundle-SymbolicName>${project.artifactId}; singleton=true</Bundle-SymbolicName>
                     <Bundle-Name>${project.name}</Bundle-Name>
                     <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
 <!--                     <Bundle-Version>${bundle.version}</Bundle-Version> -->
@@ -57,7 +58,7 @@
                      	 org.eclipse.jface;visibility:=reexport,
                     	 org.eclipse.swt;visibility:=reexport,
 				         org.eclipse.core.resources;visibility:=reexport,
-				         org.kermeta.kompren.slicer.model.edit;visibility:=reexport,
+				         fr.inria.diverse.kompren.model.edit;visibility:=reexport,
       					 org.eclipse.emf.ecore.xmi;visibility:=reexport,
 				         org.eclipse.emf.edit.ui;visibility:=reexport,
 				         org.eclipse.ui.ide;visibility:=reexport
