--- a/kompren-editor/fr.inria.diverse.kompren.xtext.ui/build.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext.ui/build.properties
@@ -1,7 +1,6 @@
 source.. = src/,\
            src-gen/,\
-           xtend-gen/,\
-           icons/
+           xtend-gen/
 bin.includes = META-INF/,\
                .,\
                icons/,\
