--- a/kompren-editor/fr.inria.diverse.kompren.xtext.ui/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext.ui/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
 	<modelVersion>4.0.0</modelVersion>
-	<name>Kompren DSL Eclipse UI</name>
 	<artifactId>fr.inria.diverse.kompren.xtext.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
 	
     <parent>
         <groupId>fr.inria.diverse.kompren</groupId>
-        <artifactId>fr.inria.diverse.kompren.editor.root</artifactId>
+        <artifactId>fr.inria.diverse.kompren.xtext_editor.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../fr.inria.diverse.kompren.xtext_editor.root/pom.xml</relativePath>
     </parent>
 
     <dependencies>
