--- a/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext/pom.xml
@@ -6,7 +6,7 @@
         <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.xtext_editor.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
-        <relativePath>../fr.inria.diverse.kompren.editor.root/pom.xml</relativePath>
+        <relativePath>../fr.inria.diverse.kompren.xtext_editor.root/pom.xml</relativePath>
     </parent>
   
 	<build>
