adding root for automatic compilation from master

--- a/kompren-releng/fr.inria.diverse.kompren.pomfirst_master/pom.xml
+++ b/kompren-releng/fr.inria.diverse.kompren.pomfirst_master/pom.xml
@@ -23,5 +23,6 @@
 	<module>
 		../../kompren-editor/fr.inria.diverse.kompren.model.editor
 	</module>
+	<module>../../kompren-core/fr.inria.diverse.kompren.root</module>
 	</modules>
 </project>
