removing parser project from kompren model.edit is now compiled using tycho instead of maven-bundle-plugin

--- a/kompren-releng/fr.inria.diverse.kompren.manifestfirst_master/pom.xml
+++ b/kompren-releng/fr.inria.diverse.kompren.manifestfirst_master/pom.xml
@@ -20,6 +20,7 @@
 		../../kompren-core/fr.inria.diverse.kompren.compiler
 	</module>
 	<module>../../kompren-core/fr.inria.diverse.kompren.model</module>
+	<module>../../kompren-editor/fr.inria.diverse.kompren.model.edit</module>
 	<module>
 		../../kompren-editor/fr.inria.diverse.kompren.xtext_editor.root
 	</module>
