--- a/kompren-editor/fr.inria.diverse.kompren.model.edit/build.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.edit/build.properties
@@ -6,6 +6,5 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src/,\
-           icons/
+source.. = src/,
 output.. = bin/
