now model.editor is built using tycho instead of maven-bundle-plugin

--- a/kompren-releng/fr.inria.diverse.kompren.feature/pom.xml
+++ b/kompren-releng/fr.inria.diverse.kompren.feature/pom.xml
@@ -12,7 +12,7 @@
   
   
   <!-- parser, edit and editor are built using maven-bundle-plugin, use pomDependencies to add them to the build -->
-  <dependencies>
+  <!-- <dependencies>
   	<dependency>
 		<groupId>fr.inria.diverse.kompren</groupId>
 		<artifactId>fr.inria.diverse.kompren.parser</artifactId>
@@ -40,6 +40,6 @@
 			</configuration>
 		</plugin>
 	  </plugins>
-  </build>
+  </build>-->
 </project> 
 
