--- a/kompren-releng/fr.inria.diverse.kompren.manifestfirst_master/pom.xml
+++ b/kompren-releng/fr.inria.diverse.kompren.manifestfirst_master/pom.xml
@@ -21,6 +21,7 @@
 	</module>
 	<module>../../kompren-core/fr.inria.diverse.kompren.model</module>
 	<module>../../kompren-editor/fr.inria.diverse.kompren.model.edit</module>
+	<module>../../kompren-editor/fr.inria.diverse.kompren.model.editor</module>
 	<module>
 		../../kompren-editor/fr.inria.diverse.kompren.xtext_editor.root
 	</module>
