--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/build.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/build.properties
@@ -6,6 +6,6 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src/,\
-           icons/
-output.. = bin
+source.. = ../../src/
+output.. = bin,\
+           ../../bin/
