added missng refactoring to pom.xml

--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/pom.xml
@@ -6,8 +6,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fr.inria.diverse.kompren.model.editor</artifactId>
-    <packaging>bundle</packaging>
-    <name>fr.inria.diverse.kompren.model.editor :: Kompren editor</name>
+    <packaging>eclipse-plugin</packaging>
     
     <parent>
         <groupId>fr.inria.diverse.kompren</groupId>
@@ -16,181 +15,5 @@
         <relativePath>../../kompren-core/fr.inria.diverse.kompren.root/pom.xml</relativePath>
     </parent>
     
-    <build>
-	    <sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>.</directory>
-				<includes>
-					<include>plugin.properties</include>
-					<include>plugin.xml</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>icons</directory>
-				<targetPath>icons</targetPath>
-			</resource>
-		</resources>
-        <plugins>
-        <plugin>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>maven-bundle-plugin</artifactId>
-            <version>2.3.7</version>
-            <extensions>true</extensions>
-            <configuration>
-                <instructions>
-                    <Bundle-SymbolicName>${project.artifactId}; singleton=true</Bundle-SymbolicName>
-                    <Bundle-Name>${project.name}</Bundle-Name>
-                    <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
-<!--                     <Bundle-Version>${bundle.version}</Bundle-Version> -->
-                    <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
-                    <Export-Package>
-                    	kompren.presentation.*
-                    </Export-Package>
-					<Require-Bundle>
-                         org.eclipse.core.runtime;visibility:=reexport,
-                         org.eclipse.core.jobs;visibility:=reexport,
-                         org.eclipse.emf.edit;visibility:=reexport,
-                         org.eclipse.emf.ecore.edit;visibility:=reexport,
-                         org.eclipse.emf.ecore;visibility:=reexport,
-                         org.eclipse.ui;visibility:=reexport,
-                         org.eclipse.ui.workbench;visibility:=reexport,
-                     	 org.eclipse.jface;visibility:=reexport,
-                    	 org.eclipse.swt;visibility:=reexport,
-				         org.eclipse.core.resources;visibility:=reexport,
-				         fr.inria.diverse.kompren.model.edit;visibility:=reexport,
-      					 org.eclipse.emf.ecore.xmi;visibility:=reexport,
-				         org.eclipse.emf.edit.ui;visibility:=reexport,
-				         org.eclipse.ui.ide;visibility:=reexport
-                        </Require-Bundle>
-                    <Import-Package>
-                    	!kompren.*,
-                    	!org.eclipse.*,
-                    	org.osgi.framework;version="[1.5,2)"
-                    </Import-Package>
-                    <Bundle-ClassPath>.</Bundle-ClassPath>
-                </instructions>
-            </configuration>
-        </plugin>
-        </plugins>
-    </build>
-
-    <dependencies>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-			<version>${emf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore</artifactId>
-			<version>${emf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.common</artifactId>
-			<version>${emf.version}</version>
-		</dependency>
-		
-        <dependency>
-            <groupId>fr.inria.diverse.kompren</groupId>
-            <artifactId>fr.inria.diverse.kompren.model.edit</artifactId>
-            <version>${kompren.version}</version>
-        </dependency>
-     <dependency>
-      <groupId>org.eclipse.emf.ecore</groupId>
-      <artifactId>edit</artifactId>
-      <version>[2.8.0.0,)</version>
-    </dependency>   
-     <dependency>
-      <groupId>org.eclipse.emf.edit</groupId>
-      <artifactId>ui</artifactId>
-      <version>[2.9.0.0,)</version>
-    </dependency>  
-	<dependency>
-	    <groupId>org.eclipse.emf.common</groupId>
-	    <artifactId>ui</artifactId>
-	    <version>[2.8.0,]</version>
-	</dependency> 
-	<dependency>
-	    <groupId>org.eclipse.emf</groupId>
-	    <artifactId>common</artifactId>
-	    <version>[2.9.1,)</version>
-	</dependency>
-     <dependency>
-      <groupId>org.kermeta.eclipse</groupId>
-      <artifactId>org.eclipse.core.runtime</artifactId>
-      <version>[3.5.0.0,)</version>
-    </dependency>   
-    <dependency>
-        <groupId>org.osgi</groupId>
-        <artifactId>org.osgi.core</artifactId>
-        <version>4.2.0</version>
-    </dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.workbench</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.views</artifactId>
-			<version>[3.4.1.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.ui.ide</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.jface</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.swt</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.resources</artifactId>
-			<version>[3.5.2.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.emf.common.ui</artifactId>
-			<version>[2.5.0.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.equinox.common</artifactId>
-			<version>[3.5.1.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.equinox.registry</artifactId>
-			<version>[3.4.100.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.jobs</artifactId>
-			<version>[3.4.100.0,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.kermeta.eclipse</groupId>
-			<artifactId>org.eclipse.core.commands</artifactId>
-			<version>[3.5.0.0,)</version>
-		</dependency>
-    </dependencies>
+    
 </project>
