--- a/kompren-examples/eclipseProjectTemplate/pom.xml
+++ b/kompren-examples/eclipseProjectTemplate/pom.xml
@@ -1,18 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>EcorePruner</groupId>
-  <artifactId>EcorePruner</artifactId>
+  <groupId>KomprenExample</groupId>
+  <artifactId>MySlicer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
+  <sourceDirectory>src/main/kompren-gen</sourceDirectory>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
+			<plugin>
+				<groupId>org.eclipse.xtend</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+				<version>2.6.0</version>
+				<executions>
+					<execution>
+					<configuration><outputDirectory>src/main/xtend-gen</outputDirectory></configuration>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+							<goal>xtend-install-debug-info</goal>
+							<goal>xtend-test-install-debug-info</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
     </plugins>
   </build>
   <dependencies>
@@ -34,12 +51,12 @@
     <dependency>
         <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.model</artifactId>
-        <version>[2.6,)</version>
+        <version>3.0.0-SNAPSHOT</version>
     </dependency>
 	<dependency>
 		<groupId>org.eclipse.xtend</groupId>
 		<artifactId>org.eclipse.xtend.lib</artifactId>
-		<version>[2.6,)</version>
+		<version>[2.6.2]</version>
 	</dependency>
 	<dependency>
 		<groupId>fr.inria.diverse.k3.al</groupId>
