--- a/explen/fr.inria.diverse.kompren.diagram/pom.xml
+++ b/explen/fr.inria.diverse.kompren.diagram/pom.xml
@@ -6,38 +6,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kompren.diagram</artifactId>
-    <packaging>bundle</packaging>
+    <artifactId>fr.inria.diverse.kompren.diagram</artifactId>
+    <packaging>jar</packaging>
     <name>kompren.diagram :: Diagram library</name>
     
     <parent>
-        <groupId>org.kermeta.kompren</groupId>
-        <artifactId>kompren.root</artifactId>
-        <version>2.0.9-SNAPSHOT</version>
+        <groupId>fr.inria.diverse.kompren</groupId>
+        <artifactId>fr.inria.diverse.kompren.root</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     
     <build>
 	    <sourceDirectory>src</sourceDirectory>
         <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>org.kermeta.kompren.diagram; singleton=true</Bundle-SymbolicName>
-                        <Bundle-Name>${project.name}</Bundle-Name>
-                        <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
-                        <Bundle-Version>${bundle.version}</Bundle-Version>
-                        <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
-                        <Export-Package>
-                        	org.kermeta.kompren.diagram.*
-                        </Export-Package>
-                        <Bundle-ClassPath>.</Bundle-ClassPath>
-                    </instructions>
-                </configuration>
-            </plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
     
@@ -45,24 +34,12 @@
         <dependency>
             <groupId>org.malai</groupId>
             <artifactId>malai.core</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>org.malai</groupId>
             <artifactId>malai.swing</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>1.2</version>
         </dependency>
     </dependencies>
-<distributionManagement>
-    <repository>
-        <id>http://maven.inria.fr</id>
-        <name>http://maven.inria.fr-releases</name>
-        <url>http://maven.inria.fr/artifactory/malai-public-release</url>
-    </repository>
-    <snapshotRepository>
-        <id>http://maven.inria.fr</id>
-        <name>http://maven.inria.fr-snapshots</name>
-        <url>http://maven.inria.fr/artifactory/malai-public-snapshot</url>
-    </snapshotRepository>
-</distributionManagement>
 </project>
