--- a/explen/fr.inria.diverse.kompren.explen.slicer/.project
+++ b/explen/fr.inria.diverse.kompren.explen.slicer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.inria.diverse.kompren.explen.slicer</name>
+	<name>fr.inria.diverse.kompren.explen.slicer</name>
 	<comment></comment>
 	<projects>
 	</projects>
