--- a/explen/fr.inria.diverse.kompren.explen.slicer/pom.xml
+++ b/explen/fr.inria.diverse.kompren.explen.slicer/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>KomprenExample</groupId>
-  <artifactId>MySlicer</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>org.inria.diverse.kompren</groupId>
+  <artifactId>org.inria.diverse.kompren.explen.slicer</artifactId>
+  <version>3.0.0-SNAPSHOT</version>
   <build>
   <sourceDirectory>src/main/kompren-gen</sourceDirectory>
     <plugins>
@@ -26,8 +26,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
     </plugins>
