pom update to bundle explen

--- a/explen/fr.inria.diverse.kompren.explen/pom.xml
+++ b/explen/fr.inria.diverse.kompren.explen/pom.xml
@@ -32,7 +32,43 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+		  </plugin>
+
+	      <plugin>
+	        <artifactId>maven-assembly-plugin</artifactId>
+	        <version>2.4</version>
+	        <configuration>
+	          <descriptors>
+	            <descriptor>src/assembly/assemblyBin.xml</descriptor>
+	          </descriptors>
+	         <finalName>Explen-${project.version}</finalName>
+	        </configuration>
+	                <executions>
+	          <execution>
+	            <id>make-assembly</id>
+	            <phase>package</phase> 
+	            <goals>
+	              <goal>single</goal>
+	            </goals>
+	          </execution>
+	        </executions>
 			</plugin>
+
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-jar-plugin</artifactId>
+	        <version>2.4</version>
+	        <configuration>
+	          <archive>
+			    <manifest>
+			    	<addClasspath>true</addClasspath>
+					<mainClass>fr.inria.diverse.kompren.explen.Explen</mainClass>
+					<classpathPrefix>lib/</classpathPrefix>
+			    </manifest>
+	            <addMavenDescriptor>false</addMavenDescriptor>
+	          </archive>
+	        </configuration>
+	      </plugin>
         </plugins>
     </build>
 
