--- a/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
@@ -141,5 +141,10 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+		<dependency>
+			<groupId>org.scala-lang.modules</groupId>
+			<artifactId>scala-parser-combinators_2.11</artifactId>
+			<version>1.0.3</version>
+		</dependency>
     </dependencies>
 </project>
