--- a/kompren-examples/examples.statsEcore/pom.xml
+++ b/kompren-examples/examples.statsEcore/pom.xml
@@ -47,6 +47,11 @@
 			<version>3.0.0-SNAPSHOT</version>
   		</dependency>
 		<dependency>
+			<groupId>fr.inria.diverse.melange</groupId>
+			<artifactId>fr.inria.diverse.melange.lib</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
