--- a/kompren-examples/examples.statsEcore/pom.xml
+++ b/kompren-examples/examples.statsEcore/pom.xml
@@ -57,6 +57,21 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
+			<version>[2.9.1,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.codegen</artifactId>
+			<version>[2.9.0,)</version>
+		</dependency>
   	</dependencies>
 </project>
 
