--- a/kompren-examples/examples.statsEcore/pom.xml
+++ b/kompren-examples/examples.statsEcore/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>org.eclipse.emf.codegen</artifactId>
 			<version>[2.9.0,)</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20141113</version>
+		</dependency>
   	</dependencies>
 </project>
 
