--- a/kompren-examples/examples.strictEcore/pom.xml
+++ b/kompren-examples/examples.strictEcore/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>fr.inria.diverse.kompren.examples.lowerTypesSlicer</artifactId>
+  <artifactId>fr.inria.diverse.kompren.examples.strictEcore</artifactId>
   
     <parent>
         <groupId>fr.inria.diverse.kompren</groupId>
