--- a/kompren-editor/fr.inria.diverse.kompren.model.editor/build.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.model.editor/build.properties
@@ -4,8 +4,10 @@ bin.includes = .,\
                icons/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               bin/
 jars.compile.order = .
-source.. = ../../src/
+source.. = src/
 output.. = bin,\
-           ../../bin/
+           ../../bin/,\
+           bin/
