--- a/explen/fr.inria.diverse.kompren.diagram/pom.xml
+++ b/explen/fr.inria.diverse.kompren.diagram/pom.xml
@@ -42,4 +42,17 @@
             <version>1.2</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>mavenInriaSnapshot</id>
+            <name>http://maven.inria.fr-snapshots</name>
+            <url>http://maven.inria.fr/artifactory/malai-public-snapshot</url>
+        </repository>
+        <repository>
+            <id>mavenInriaRelease</id>
+            <name>http://maven.inria.fr-releases</name>
+            <url>http://maven.inria.fr/artifactory/malai-public-release</url>
+        </repository>
+    </repositories>
 </project>
