add relative path to parent

--- a/kompren-editor/fr.inria.diverse.kompren.model.edit/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.model.edit/pom.xml
@@ -14,6 +14,7 @@
         <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
+		<relativePath>../../kompren-core/fr.inria.diverse.kompren.root</relativePath>
     </parent>
     
 </project>
