--- a/kompren-releng/fr.inria.diverse.kompren.feature/pom.xml
+++ b/kompren-releng/fr.inria.diverse.kompren.feature/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>fr.inria.diverse.kompren</groupId>
 		<artifactId>fr.inria.diverse.kompren.root</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
+		<relativePath>../../kompren-core/fr.inria.diverse.kompren.root</relativePath>
 	</parent>
   <artifactId>fr.inria.diverse.kompren.feature</artifactId>
   <packaging>eclipse-feature</packaging>
