--- a/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.parser/pom.xml
@@ -13,6 +13,7 @@
         <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../fr.inria.diverse.kompren.root/pom.xml</relativePath>
     </parent>
 
     <build>
