--- a/explen/fr.inria.diverse.kompren.diagram/pom.xml
+++ b/explen/fr.inria.diverse.kompren.diagram/pom.xml
@@ -44,15 +44,15 @@
     </dependencies>
 
     <repositories>
-        <repository>
-            <id>mavenInriaSnapshot</id>
-            <name>http://maven.inria.fr-snapshots</name>
-            <url>http://maven.inria.fr/artifactory/malai-public-snapshot</url>
-        </repository>
-        <repository>
-            <id>mavenInriaRelease</id>
-            <name>http://maven.inria.fr-releases</name>
-            <url>http://maven.inria.fr/artifactory/malai-public-release</url>
-        </repository>
+		<repository>
+		     <id>mavenInriaSnapshot</id>
+		     <name>http://maven.inria.fr-snapshots</name>
+		     <url>https://maven.inria.fr/artifactory/public-snapshot</url>
+		 </repository>
+		<repository>
+		     <id>mavenInriaRelease</id>
+		     <name>http://maven.inria.fr-releases</name>
+		     <url>https://maven.inria.fr/artifactory/public-release</url>
+		 </repository>
     </repositories>
 </project>
